[gd_scene load_steps=7 format=2]

[ext_resource path="res://BallCharacter.tscn" type="PackedScene" id=1]
[ext_resource path="res://TestLevel.gd" type="Script" id=2]
[ext_resource path="res://TestCharacter.gd" type="Script" id=3]

[sub_resource type="QuadMesh" id=1]
size = Vector2( 10, 10 )

[sub_resource type="SpatialMaterial" id=2]
albedo_color = Color( 0.494118, 0.396078, 0.396078, 1 )

[sub_resource type="ConvexPolygonShape" id=3]
points = PoolVector3Array( -5, -5, 0, -5, 5, 0, 5, 5, 0, -5, -5, 0, 5, 5, 0, 5, -5, 0 )

[node name="TestLevel" type="Spatial"]
script = ExtResource( 2 )

[node name="Floor" type="StaticBody" parent="."]

[node name="MeshInstance" type="MeshInstance" parent="Floor"]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, 1, 0, -1, -1.62921e-07, 0, 0, 0 )
mesh = SubResource( 1 )
material/0 = SubResource( 2 )

[node name="CollisionShape" type="CollisionShape" parent="Floor"]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, 1, 0, -1, -1.62921e-07, 0, 0, 0 )
shape = SubResource( 3 )

[node name="Label" type="Label" parent="."]
margin_left = 480.621
margin_top = 371.776
margin_right = 537.621
margin_bottom = 385.776
text = "direction"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="."]
margin_left = 483.732
margin_top = 396.562
margin_right = 523.732
margin_bottom = 410.562
text = "velocity"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="."]
margin_left = 489.815
margin_top = 420.945
margin_right = 529.815
margin_bottom = 451.945
text = "blend
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InterpolatedCamera" type="InterpolatedCamera" parent="."]
transform = Transform( 1, 0, 0, 0, 0.865545, 0.500831, 0, -0.500831, 0.865545, 0, 2.74389, 3.61256 )
speed = 6.0
enabled = true

[node name="BallCharacter" parent="." instance=ExtResource( 1 )]
script = ExtResource( 3 )
